# PeakScript

./: .gitignore  CMakeLists.txt  LICENSE  PeakScript.csproj  README.md  interpreter-for-cs.csproj  version.md
download/: README.md
interpreter-for-cpp/: todo.md
interpreter-for-cpp/src/: Method.cpp  Method.h  Sentence.h  SentenceBlock.cpp  SentenceBlock.h  SentenceCondition.cpp  SentenceCondition.h  SentenceExpression.cpp  SentenceExpressionArithmetic.cpp  SentenceExpressionArithmetic.h  SentenceExpressionArithmeticInstance.cpp  SentenceExpressionArithmeticInstance.h  SentenceExpressionLogicInstance.cpp  SentenceExpressionLogicInstance.h  SentenceExpressionMath.h  SentenceExpressionRelationalInstance.cpp  SentenceExpressionRelationalInstance.h  SentenceExpressionValue.cpp  SentenceExpressionVariable.cpp  SentenceMethodCall.cpp  SentenceMethodDefine.cpp  SentenceVar.cpp  SentenceVar.h  SentenceVarFromName.cpp  SentenceVarFromName.h  SentenceVarFromValue.cpp  SentenceVarFromValue.h  Space.cpp  Space.h  Value.h  ValueNull.h  ValueNumber.cpp  ValueNumber.h  ValueString.h  ValueTool.cpp  ValueTool.h  Variable.cpp  Variable.h  VirtualJourney.cpp  VirtualJourney.h  (+5 more)
interpreter-for-cs/: interpreter-for-cs.csproj
peak-vs-project/: .gitignore  peak-vs-project.sln
src/: VirtualJourney.cs  VirtualJourney.h  VirtualMachine.cpp  VirtualMachine.cs  VirtualTool.cpp  VirtualTool.cs  peak.h  virtual_journey.cpp  virtual_journey.h  virtual_machine.cpp  virtual_machine.h  virtual_tool.cpp  virtual_tool.h
src/Grammar/: Grammar.h  (+5 more)
src_/: peak.h  virtual_journey.cpp  virtual_tool.h
test/: main.cpp
(+511 files in other folders)
